# ChangeLog for media-video/em8300-libraries
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-video/em8300-libraries/ChangeLog,v 1.34 2007/06/30 08:12:24 drac Exp $

  30 Jun 2007; Samuli Suominen <drac@gentoo.org> Manifest:
  Remove myself from metadata.xml as I don't have this hardware anymore.

  12 Apr 2007; <welp@gentoo.org> em8300-libraries-0.16.0.ebuild:
  Stable on amd64 wrt bug 158144

  06 Jan 2007; Matthias Schwarzott <zzam@gentoo.org>
  em8300-libraries-0.15.3.ebuild:
  Converted to elog.

  16 Dec 2006; Matthias Schwarzott <zzam@gentoo.org>
  -em8300-libraries-0.13.0-r1.ebuild, -em8300-libraries-0.15.2-r1.ebuild,
  -em8300-libraries-0.15.3-r1.ebuild, -em8300-libraries-0.16.0_rc2.ebuild:
  Cleanup of old ebuilds.

  16 Dec 2006; Christian Faulhammer <opfer@gentoo.org>
  em8300-libraries-0.16.0.ebuild:
  stable x86, bug #158144

  06 Dec 2006; Matthias Schwarzott <zzam@gentoo.org>
  em8300-libraries-0.16.0.ebuild:
  Corrected wrong SRC_URI and nasty newline, Bug #157295, thanks to Jakub for
  noticing.

*em8300-libraries-0.16.0 (01 Dec 2006)

  01 Dec 2006; Matthias Schwarzott <zzam@gentoo.org>
  +em8300-libraries-0.16.0.ebuild:
  Version bumped.

  21 Nov 2006; Matthias Schwarzott <zzam@gentoo.org> metadata.xml:
  Took over proxying maintainership from Flameeyes.

*em8300-libraries-0.16.0_rc2 (17 Nov 2006)

  17 Nov 2006; Diego Pettenò <flameeyes@gentoo.org>
  +em8300-libraries-0.16.0_rc2.ebuild:
  Correct version bump, thanks to Samuli for noticing I was standing asleep
  yesterday.

*em8300-libraries-0.15.3-r1 (16 Nov 2006)

  16 Nov 2006; Diego Pettenò <flameeyes@gentoo.org> metadata.xml,
  +em8300-libraries-0.15.3-r1.ebuild:
  Fix for building with newer kernels, thanks to Samuli Suominen in bug
  #155117, who's going to take care of this until arj come back at least.

  14 May 2006; Anders Rune Jensen <arj@gentoo.org>
  em8300-libraries-0.15.3.ebuild, -em8300-libraries-0.15.2.ebuild: