@@ -1,0 +1,3 @@
+MD5 139bd3aee7ba7a2aac903e311bb14b03 em8300-0.16.2.tar.gz 343468
+RMD160 0d07f0808fa98f7d650273f5004ba6316a8ab294 em8300-0.16.2.tar.gz 343468
+SHA256 a21fdad6e9098d862ce7674bdf1856012f89fd71be3d26b02b83920c2b26d410 em8300-0.16.2.tar.gz 343468
