@@ -1,6 +1,11 @@
 # ChangeLog for media-video/em8300-modules
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-video/em8300-modules/ChangeLog,v 1.40 2007/06/30 08:13:21 drac Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-video/em8300-modules/ChangeLog,v 1.41 2007/07/01 19:26:25 zypher Exp $
+
+*em8300-modules-0.16.2 (06 May 2007)
+
+  01 Jul 2007; Marc Hildebrand <zypher@gentoo.org> em8300-modules-0.16.2.ebuild:
+  Version bump.
 
   30 Jun 2007; Samuli Suominen <drac@gentoo.org> metadata.xml:
   Remove myself from metadata.xml as I don't have this hardware anymore.
