@@ -1,6 +1,11 @@
 # ChangeLog for media-video/em8300-libraries
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-video/em8300-libraries/ChangeLog,v 1.34 2007/06/30 08:12:24 drac Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-video/em8300-libraries/ChangeLog,v 1.35 2007/07/01 19:27:58 zypher Exp $
+
+*em8300-libraries-0.16.2 (06 May 2007)
+
+  01 Jul 2007; Marc Hildebrand <zypher@gentoo.org> em8300-libraries-0.16.2.ebuild:
+  Version bump.
 
   30 Jun 2007; Samuli Suominen <drac@gentoo.org> Manifest:
   Remove myself from metadata.xml as I don't have this hardware anymore.
